# taskman

./: .gitignore  README.md
.github/workflows/: api.yml
services/tasks_api/: junit.xml  main.py  models.py  package-lock.json  package.json  pyproject.toml  serverless.yml  tests.py
