[project]
name = "tasks-api"
version = "0.1.0"
description = "Tasks manager api"
authors = [
    {name = "Ola Ajibode",email = "ola.ajibode@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.9.10"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"

