[project]
name = "tasks-api"
version = "0.1.0"
description = "Tasks manager api"
authors = [
    {name = "Ola Ajibode",email = "ola.ajibode@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.9.10"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"


[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = "Tasks manager api"
authors = ["Ola Ajibode <ola.ajibode@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
